--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,4 +1,4 @@
-The code performs Random Forest Classification and Land Cover Change Detection Analysis.
+The code performs Random Forest Classification and Land Cover Change Detection Analysis Land Cover Transition Matrix.
 The study area is Ghana’s southwestern region. 
 The study area is situated in a beautiful landscape, and is close to the Gulf of Guinea,
 Located in the Southern part of the tropical Atlantic Ocean. For this study, 
